Basic test conditions and outcomes, including unit test for it against a local project.

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,24 @@ repositories {
     mavenCentral()
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of("17")
+    }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += "--enable-preview"
+}
+
 dependencies {
 
     implementation "ch.qos.logback:logback-core:1.4.14"
